CatWoman, Zoids Battle Legends, ZooCube

--- a/Data/Sys/GameSettings/GCZ.ini
+++ b/Data/Sys/GameSettings/GCZ.ini
@@ -20,3 +20,15 @@ EmulationStateId = 3
 [Video_Settings]
 SafeTextureCacheColorSamples = 512
 
+[HideObjectCodes]
+$HUD brighten
+128bits:0x0000000000000000:0x0000000044200000
+$EFB and main menu background
+128bits:0x0000000000000000:0x0000000000000000
+$small EFB
+32bits:0x0000000000000000:0x0000000043A00000
+
+[VR]
+UnitsPerMetre = 1.0
+VRStateId = 3
+VRIssues = Use hide object codes. Camera angles, minor culling
