--- a/Data/Sys/GameSettings/GZS.ini
+++ b/Data/Sys/GameSettings/GZS.ini
@@ -17,3 +17,10 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+CameraForward = 10.0000000
+AimDistance = 70.0000000
+MinFOV = 46.0000000
+CanReadCameraAngles = True
+VRStateId = 2
+VRIssues = 3D HUD too far to read, missing textures
