--- a/Source/Core/Core/CMakeLists.txt
+++ b/Source/Core/Core/CMakeLists.txt
@@ -250,7 +250,7 @@ set(LIBS ${LIBS} ${MBEDTLS_LIBRARIES})
 if(WIN32)
 	set(SRCS ${SRCS} HW/BBA-TAP/TAP_Win32.cpp HW/WiimoteReal/IOWin.cpp)
 elseif(APPLE)
-	set(SRCS ${SRCS} HW/BBA-TAP/TAP_Apple.cpp HW/WiimoteReal/IOdarwin.mm)
+	set(SRCS ${SRCS} HW/BBA-TAP/TAP_Apple.cpp HW/WiimoteReal/IOdarwin.mm HW/WiimoteReal/IOhidapi.cpp)
 	set(LIBS ${LIBS}
 		${IOB_LIBRARY})
 elseif(UNIX)
@@ -260,6 +260,9 @@ elseif(UNIX)
 		set(LIBS ${LIBS} bluetooth)
 	elseif(ANDROID)
 		set(SRCS ${SRCS} HW/WiimoteReal/IOAndroid.cpp)
+	endif()
+	if(${CMAKE_SYSTEM_NAME} STREQUAL "Linux" AND NOT ANDROID)
+		set(SRCS ${SRCS} HW/WiimoteReal/IOhidapi.cpp)
 	endif()
 endif()
 
