X-Men Legends, X2: Wolverine's Revenge, X-Men 3: The Official Game

--- a/Data/Sys/GameSettings/G3X.ini
+++ b/Data/Sys/GameSettings/G3X.ini
@@ -21,3 +21,20 @@ EmulationIssues =
 [Video_Settings]
 SafeTextureCacheColorSamples = 512
 
+[VR]
+UnitsPerMetre = 1.0
+CanReadCameraAngles = True
+CameraPitch = 25.0000000
+ReadPitch = 180.000000
+VRStateId = 4
+VRIssues = minor culling
+
+[HideObjectCodes]
+$top letterbox
+128bits:0x8080808181818282:0x8283838300000000
+$top letterbox fade
+128bits:0x8484848585858686:0x8687878700000000
+$bottom letterbox
+128bits:0x8888888989898A8A:0x8A8B8B8B00000000
+$bottom letterbox fade
+128bits:0x8C8C8C8D8D8D8E8E:0x8E8F8F8F00000000
