--- a/Data/Sys/GameSettings/GWV.ini
+++ b/Data/Sys/GameSettings/GWV.ini
@@ -17,3 +17,8 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+UnitsPerMetre = 1.0
+ScreenHeight = 1.79999995
+VRStateId = 3
+VRIssues = camera angles
