--- a/Data/Sys/GameSettings/GXL.ini
+++ b/Data/Sys/GameSettings/GXL.ini
@@ -18,7 +18,13 @@ EmulationIssues =
 # Add action replay cheats here.
 
 [VR]
-UnitsPerMetre = 79.496925
-HudDistance = 1.700000
-CameraForward = 1.000000
-CameraPitch = 20.000000
+UnitsPerMetre = 36.9000015
+HudDistance = 1.60000002
+HudThickness = 0.400000006
+HudOnTop = True
+AimDistance = 5.00000000
+CameraPitch = 43.0000000
+CanReadCameraAngles = True
+ReadPitch = 90.0000000
+VRStateId = 3
+VRIssues = culling, missing faces (rendered to HUD)
