Zatch Bell: Momodo Battles, and Zatch Bell: Momodo Fury

--- a/Data/Sys/GameSettings/GAB.ini
+++ b/Data/Sys/GameSettings/GAB.ini
@@ -17,3 +17,9 @@ EmulationIssues = Need Projection Before R945
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+CanReadCameraAngles = True
+HudDistance = 1.25000000
+HudThickness = 2.00000000
+ScreenHeight = 1.60000002
+VRStateId = 4
