--- a/Data/Sys/GameSettings/GYK.ini
+++ b/Data/Sys/GameSettings/GYK.ini
@@ -17,3 +17,18 @@ EmulationIssues =
 [ActionReplay]
 # Add action replay cheats here.
 
+[VR]
+CanReadCameraAngles = True
+HudThickness = 2.00000000
+ScreenHeight = 1.10000002
+VRStateId = 4
+VRIssues = Use hide object codes. Culling.
+CameraMinPoly = 900
+
+[HideObjectCodes]
+$black square
+128bits:0x0000000043E80000:0x00000000000000FF
+$top bar
+128bits:0x0000000000000000:0x00000000000000FF
+$black background
+128bits:0x0000000000000000:0x3F7FFFFF00000000
