--- a/Source/UnitTests/Common/CMakeLists.txt
+++ b/Source/UnitTests/Common/CMakeLists.txt
@@ -8,4 +8,5 @@ add_dolphin_test(FifoQueueTest FifoQueueTest.cpp)
 add_dolphin_test(FixedSizeQueueTest FixedSizeQueueTest.cpp)
 add_dolphin_test(FlagTest FlagTest.cpp)
 add_dolphin_test(MathUtilTest MathUtilTest.cpp)
+add_dolphin_test(StringUtilTest StringUtil.cpp)
 add_dolphin_test(x64EmitterTest x64EmitterTest.cpp)
