Add a typesafe event system

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -7,6 +7,7 @@ set(SRCS Analytics.cpp
          FileUtil.cpp
          GekkoDisassembler.cpp
          Hash.cpp
+         Hooks.cpp
          IniFile.cpp
          JitRegister.cpp
          MathUtil.cpp
