attempt to fix SFML build

--- a/Externals/SFML/src/SFML/CMakeLists.txt
+++ b/Externals/SFML/src/SFML/CMakeLists.txt
@@ -53,7 +53,7 @@ add_subdirectory(System)
 if(SFML_OS_WINDOWS OR SFML_OS_ANDROID OR SFML_OS_IOS)
     add_subdirectory(Main)
 endif()
-add_subdirectory(Window)
+# add_subdirectory(Window)
 add_subdirectory(Network)
-add_subdirectory(Graphics)
-add_subdirectory(Audio)
+# add_subdirectory(Graphics)
+# add_subdirectory(Audio)
