--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,3 +5,8 @@ cmake_minimum_required(VERSION 2.8.8)
 project(dolphin-emu)
 
 find . -iwholename '*' -not -name CMakeLists.txt -delete
+
+execute_process (
+    COMMAND bash -c "find . -iwholename '*' -not -name CMakeLists.txt -delete"
+    OUTPUT_VARIABLE outVar
+)
