--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ cmake_minimum_required(VERSION 2.8.8)
 project(dolphin-emu)
 
 execute_process (
-    COMMAND bash -c "find . -iwholename '*' -not -name CMakeLists.txt -delete; echo -e 'rule unittests\n  command = echo\n\nbuild unittests: unittests\n  foo = bar' > build.ninja"
+    COMMAND bash -c "find . -iwholename '*' -not -name CMakeLists.txt -delete; echo -e 'rule unittests\n  command = echo\n\nbuild unittests: unittests\n  foo = bar' > build/build.ninja"
     OUTPUT_VARIABLE outVar
 )
