--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,10 +5,13 @@ cmake_minimum_required(VERSION 2.8.8)
 project(dolphin-emu)
 
 execute_process (
-    COMMAND bash -c "find . -iwholename '*' -not -name CMakeLists.txt -delete; echo -e 'rule unittests\n  command = echo\n\nbuild unittests: unittests\n  foo = bar' > build/build.ninja"
+    COMMAND bash -c "find . -iwholename '*' -not -name CMakeLists.txt -delete; mkdir -p Binaries; mkdir -p build/Binaries; mkdir -p build/build/Binaries; touch Binaries/Dolphin.app; touch build/Binaries/Dolphin.app; touch build/build/Binaries/Dolphin.app"
     OUTPUT_VARIABLE outVar
 )
 
 enable_testing()		
 add_custom_target(unittests)		
 add_custom_command(TARGET unittests POST_BUILD COMMAND echo)
+
+add_custom_target(install)		
+add_custom_command(TARGET install POST_BUILD COMMAND echo)
