--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -541,12 +541,7 @@ if(USE_X11)
 		add_definitions(-DHAVE_XRANDR=0)
 	endif(XRANDR_FOUND)
 
-	pkg_check_modules(XINPUT2 xi>=1.5.0)
-	if(XINPUT2_FOUND)
-		add_definitions(-DHAVE_X11_XINPUT2=1)
-	else()
-		add_definitions(-DHAVE_X11_XINPUT2=0)
-	endif(XINPUT2_FOUND)
+	pkg_check_modules(XINPUT2 REQUIRED xi>=1.5.0)
 endif()
 if(ENCODE_FRAMEDUMPS)
 	check_libav()
