Use static libcurl when building the LibRetro core This change in the check allows to use a static build of libcurl for the Dolphin core and avoid issues with this library in the future.
Fixes #37.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -766,7 +766,7 @@ else()
 endif()
 
 find_package(CURL)
-if(CURL_FOUND)
+if(CURL_FOUND AND NOT(LIBRETRO))
   message(STATUS "Using shared libcurl")
   include_directories(${CURL_INCLUDE_DIRS})
 else()
