InputCommon: Overhaul of input profile handling.  Previous "profiles" were just pathes to configuration that updated a controller's key-binding.  Now profiles are actual objects that are tracked on a controller via a "ProfileManager".  This allows the profile to be synchronized across the UI, hotkey-manager (used for cycling) and any other use

--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -1,4 +1,6 @@
 add_library(inputcommon
+  DeviceProfileContainer.cpp
+  DeviceProfileContainer.h
   DynamicInputTextureConfiguration.cpp
   DynamicInputTextureConfiguration.h
   DynamicInputTextureManager.cpp
@@ -11,6 +13,8 @@ add_library(inputcommon
   InputProfile.h
   ControllerEmu/ControllerEmu.cpp
   ControllerEmu/ControllerEmu.h
+  ControllerEmu/ProfileManager.cpp
+  ControllerEmu/ProfileManager.h
   ControllerEmu/StickGate.cpp
   ControllerEmu/StickGate.h
   ControllerEmu/Control/Control.cpp
