OpenXR: Allow cmake to disable OpenXR support.

--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -92,8 +92,6 @@ add_library(common
   NandPaths.h
   Network.cpp
   Network.h
-  OpenXR.cpp
-  OpenXR.h
   PcapFile.cpp
   PcapFile.h
   PerformanceCounter.cpp
@@ -291,6 +289,10 @@ elseif(WIN32)
 endif()
 
 if(USE_OPENXR)
+  target_sources(common PRIVATE
+    OpenXR.cpp
+    OpenXR.h
+  )
   target_link_libraries(common PUBLIC OpenXR::Loader)
   target_compile_definitions(common PUBLIC "USE_OPENXR=1")
 endif()
