--- a/Source/Core/Common/CMakeLists.txt
+++ b/Source/Core/Common/CMakeLists.txt
@@ -147,7 +147,7 @@ PRIVATE
   ${VTUNE_LIBRARIES}
 )
 
-if (APPLE)
+if (APPLE AND NOT IOS)
   target_link_libraries(common
   PRIVATE
     ${APPKIT_LIBRARY}
@@ -277,7 +277,7 @@ if(OPROFILE_FOUND)
   target_link_libraries(common PRIVATE OProfile::OProfile)
 endif()
 
-if(UNIX)
+if(UNIX AND NOT IOS)
   # Posix networking code needs to be fixed for Windows
   add_executable(traversal_server TraversalServer.cpp)
   target_link_libraries(traversal_server PRIVATE common)
