--- a/Source/Core/InputCommon/CMakeLists.txt
+++ b/Source/Core/InputCommon/CMakeLists.txt
@@ -131,7 +131,9 @@ endif()
 
 if(ANDROID)
   target_sources(inputcommon PRIVATE GCAdapter_Android.cpp)
-elseif(NOT IOS)
+elseif(IOS)
+  target_sources(inputcommon PRIVATE GCAdapter_iOS.cpp)
+else()
   target_sources(inputcommon PRIVATE
     GCAdapter.cpp
     GCAdapter.h
