--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,16 @@
 # General setup
 #
 cmake_minimum_required(VERSION 3.10)
-set(CMAKE_OSX_ARCHITECTURES "x86_64")
-# Minimum OS X version.
-# This is inserted into the Info.plist as well.
 
-# MacOS prior to 10.12 did not fully support C++17, which is used to
-# handle configuration options
-set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12.0" CACHE STRING "")
+if(APPLE AND NOT IOS)
+  set(CMAKE_OSX_ARCHITECTURES "x86_64")
+  # Minimum OS X version.
+  # This is inserted into the Info.plist as well.
+
+  # MacOS prior to 10.12 did not fully support C++17, which is used to
+  # handle configuration options
+  set(CMAKE_OSX_DEPLOYMENT_TARGET "10.12.0" CACHE STRING "")
+endif()
 
 project(dolphin-emu)
 
